--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 </div>
             </div>
         </header >
+        <!-- -----------2nd part----------- -->
         <div class="card-section">
             <div class="cards">
                 <div class="card">
@@ -77,7 +78,7 @@
             </div>
 
         </div>
-
+  <!-- --------------------3rdpart----------------- -->
         <div class="collections">
             <h1>Collections</h1>
             <p>Explore curated lists of top restaurants, cafes, pubs, and bars in Mumbai, based on trends
@@ -214,6 +215,8 @@
                 </div>
             </div>
         </div>
+
+      <!-- -------------- GET-APP-------------- -->
         <div class="app-section">
             <div class="app">
                 <div class="app-image">
@@ -241,6 +244,8 @@
             </div>
            
         </div>
+
+        <!-- ---------------EXPLORE----------- -->
         <div class="collections">
                 <!-- --------explore-heading-id------- -->
                 <h1 id="Explore-heading">Explore options near me</h1>
@@ -261,6 +266,8 @@
                     <i class="fa-solid fa-angle-down" style="float: right;"></i>
                 </div>
         </div>
+
+        -----------FOOTER-----------
         <footer>
             <div class="container">
                 <div class="footer-top">
