--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 </div>
         </div>
 
-        -----------FOOTER-----------
+        <!-- -----------FOOTER----------- -->
         <footer>
             <div class="container">
                 <div class="footer-top">
